test_src/compiler_errors/types/arithmetic/ModBoolError1.b
class ModBoolError1 {
    void test() {
        println(true % 1);
    }
}
